--- a/index.html
+++ b/index.html
@@ -17,11 +17,77 @@
                 </link>
             </meta>
         </meta>
+
+        <meta property="og:title" content="Bryan Rojas - Fullstack Developer based on Costa Rica" />
+        <meta property="og:image" content="./img/social-image.png" />
+        <meta property="og:description" content="Senior PHP Developer & Wordpress Lover. HTML5, CSS3, Bootstrap, Javascript, jQuery, Angular, Laravel, Codeigniter, NodeJS, MySQL & PostgreSQL." />
+        <meta property="og:site_name" content="bryandev.com" />
+        <meta property="og:url" content="www.bryandev.com/" />
+        <meta property="og:website" content="http://bryandev.com" />
+
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="@brojask" />
+        <meta name="twitter:creator" content="@brojask" />
+        <meta name="twitter:title" content="Bryan Rojas - Fullstack Developer based on Costa Rica" />
+        <meta name="twitter:description" content="Senior PHP Developer & Wordpress Lover. HTML5, CSS3, Bootstrap, Javascript, jQuery, Angular, Laravel, Codeigniter, NodeJS, MySQL & PostgreSQL." />
+        <meta name="twitter:image" content="./img/social-image.png" />
+
         <script src="https://www.w3schools.com/lib/w3.js"></script>
+
+        <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+
     </head>
     <body translate="no">
-        
-        <div w3-include-html="./includes/navbar.html"></div>
+        <span id="top"></span>
+        <nav class="navbar navbar-default navbar-fixed-top navbar-bg-custom" id="main-navbar">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#main-navbar-collapse" data-toggle="collapse" type="button">
+                        <span class="sr-only">
+                            Toggle navigation
+                        </span>
+                        <span class="icon-bar">
+                        </span>
+                        <span class="icon-bar">
+                        </span>
+                        <span class="icon-bar">
+                        </span>
+                    </button>
+                    <div class="page-scroll">
+                        <a class="navbar-brand" href="#top">
+                            <img alt="" src="./img/logo.png"/>
+                        </a>
+                    </div>
+                </div>
+                <div class="collapse navbar-collapse" id="main-navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="page-scroll">
+                            <a href="#portfolio">
+                                Projects
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#skills">
+                                Skills
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#clients">
+                                Clients
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#contact">
+                                Contact
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container-fluid -->
+        </nav>
 
         <div w3-include-html="./includes/hero-image.html"></div>
         
@@ -72,16 +138,15 @@
                         <img alt="" class="img-responsive" src="./img/clients/logo-ex2.png"/>
                     </div>
                     <div>
-                        <h3>
-                            3
-                        </h3>
+                        <img alt="" class="img-responsive" src="./img/clients/ucr.svg"/>
                     </div>
                     <div>
-                        <h3>
-                            4
-                        </h3>
+                        <img alt="" class="img-responsive" src="./img/clients/logo-costa-blu-txt.svg"/>
                     </div>
                     <div>
+                        <img alt="" class="img-responsive" src="./img/clients/bosco.png"/>
+                    </div>
+<!--                     <div>
                         <h3>
                             5
                         </h3>
@@ -100,7 +165,7 @@
                         <h3>
                             8
                         </h3>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -115,7 +180,9 @@
         <script src="https://getbootstrap.com/dist/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
         <script src="https://tsumbaluk.in.ua/design/js/blog-script/jQuery-svg-progress-min.js"></script>
-        <script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>        
+        <script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>      
+        <script src="https://smtpjs.com/smtp.js"></script>
+
         <script src="./js/app.js"></script>
 
     </body>
