--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <link rel="icon" href="./img/favicon.png" sizes="32x32" type="image/png">
             <title>PORTFOLIO - Bryan Rojas</title>
             <meta content="width=device-width, initial-scale=1" name="viewport">
-                <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet prefetch">
+                <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet prefetch">
                     <link href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css" rel="stylesheet prefetch">
                         <link href="https://kenwheeler.github.io/slick/slick/slick-theme.css" rel="stylesheet prefetch">
                             <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet prefetch">
@@ -177,7 +177,7 @@
         <div w3-include-html="./includes/modal.html"></div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="https://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
         <script src="https://tsumbaluk.in.ua/design/js/blog-script/jQuery-svg-progress-min.js"></script>
         <script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>      
