--- a/index.html
+++ b/index.html
@@ -72,34 +72,13 @@
                         <img alt="" class="img-responsive" src="./img/clients/logo-ex2.png"/>
                     </div>
                     <div>
-                        <h3>
-                            3
-                        </h3>
+                        <img alt="" class="img-responsive" src="./img/clients/ucr.svg"/>
                     </div>
                     <div>
-                        <h3>
-                            4
-                        </h3>
+                        <img alt="" class="img-responsive" src="./img/clients/logo-costa-blu-txt.svg"/>
                     </div>
                     <div>
-                        <h3>
-                            5
-                        </h3>
-                    </div>
-                    <div>
-                        <h3>
-                            6
-                        </h3>
-                    </div>
-                    <div>
-                        <h3>
-                            7
-                        </h3>
-                    </div>
-                    <div>
-                        <h3>
-                            8
-                        </h3>
+                        <img alt="" class="img-responsive" src="./img/clients/bosco.png"/>
                     </div>
                 </div>
             </div>
