--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
                 </link>
             </meta>
         </meta>
+        <meta property="og:title" content="Bryan Rojas - Fullstack Developer based on Costa Rica" />
+        <meta property="og:image" content="./img/social-image.png" />
+        <meta property="og:description" content="Senior PHP Developer & Wordpress Lover. HTML5, CSS3, Bootstrap, Javascript, jQuery, Angular, Laravel, Codeigniter, NodeJS, MySQL & PostgreSQL." />
+        <meta property="og:site_name" content="bryandev.com" />
+        <meta property="og:url" content="www.bryandev.com/" />
+        <meta property="og:website" content="http://bryandev.com" />
+
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="@brojask" />
+        <meta name="twitter:creator" content="@brojask" />
+        <meta name="twitter:title" content="Bryan Rojas - Fullstack Developer based on Costa Rica" />
+        <meta name="twitter:description" content="Senior PHP Developer & Wordpress Lover. HTML5, CSS3, Bootstrap, Javascript, jQuery, Angular, Laravel, Codeigniter, NodeJS, MySQL & PostgreSQL." />
+        <meta name="twitter:image" content="./img/social-image.png" />
+
         <script src="https://www.w3schools.com/lib/w3.js"></script>
+
+        <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+
     </head>
     <body translate="no">
         
