--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <meta property="og:title" content="Bryan Rojas - Fullstack Developer based on Costa Rica" />
         <meta property="og:image" content="./img/social-image.png" />
         <meta property="og:description" content="Senior PHP Developer & Wordpress Lover. HTML5, CSS3, Bootstrap, Javascript, jQuery, Angular, Laravel, Codeigniter, NodeJS, MySQL & PostgreSQL." />
-        <meta property="og:site_name" content="bryandev.com" />
-        <meta property="og:url" content="www.bryandev.com/" />
-        <meta property="og:website" content="http://bryandev.com" />
+        <meta property="og:site_name" content="jeweldev.com" />
+        <meta property="og:url" content="www.jeweldev.com" />
+        <meta property="og:website" content="http://www.jeweldev.com" />
 
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="@brojask" />
