--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-        <script src="https://tsumbaluk.in.ua/design/js/blog-script/jQuery-svg-progress-min.js"></script>
+        <script src="./js/jQuery-svg-progress-min.js"></script>
         <script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>      
         <script src="https://smtpjs.com/smtp.js"></script>
 
